refactoring some configs
